--- a/src/app/tirage-details/tirage-details.component.css
+++ b/src/app/tirage-details/tirage-details.component.css
@@ -5,15 +5,19 @@ table {
 }
 
 .posit {
-  margin-left: 5%;
+  /*margin-left: 5%;
   margin-right: 30%;
-  padding: 0%;
+  padding: 0%;*/
 }
 .row{
   margin-bottom: 25px !important;
 /*  box-shadow: 0px 2px 2px black;*/
 }
-
+.telecharger{
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+}
 
 .button1 {
   background-color: #FFFFFF;
