--- a/src/app/tirage-details/tirage-details.component.html
+++ b/src/app/tirage-details/tirage-details.component.html
@@ -47,7 +47,7 @@
   </div>
 </div>
 
-  <div class="m-3 retour" (click)="goBack()" ><img class="cursor" width="100" src="../../assets/Group%204.svg" alt="" srcset=""></div>
+  <div class="m-3 retour"  ><img class="cursor" (click)="goBack()" width="100" src="../../assets/Group%204.svg" alt="" srcset=""></div>
 
 
 
