--- a/src/app/liste-details/liste-details.component.html
+++ b/src/app/liste-details/liste-details.component.html
@@ -1,8 +1,7 @@
-
 <div class="container-fluid">
 
-    <h2 class="mt-4">DETAIL DE LA {{libelleListe}}</h2>
-    <hr>
+  <h2 class="mt-4">DETAIL DE LA {{libelleListe}}</h2>
+  <hr>
   <div class="row">
     <div class="col"><span class="titre"> Date :</span> {{dateCreationListe | date}} </div>
   </div>
@@ -14,27 +13,29 @@
 
       <!-- Position Column -->
       <ng-container matColumnDef="libellel">
-        <th mat-header-cell *matHeaderCellDef class="text-center"> Libelle Tirage </th>
-        <td mat-cell *matCellDef="let element" class="text-center" [routerLink]=[url,element.libellel] > <a class="lien cursor">{{element.libellel}}</a>  </td>
+        <th mat-header-cell *matHeaderCellDef class="text-center"> Libelle Tirage</th>
+        <td mat-cell *matCellDef="let element" class="text-center" [routerLink]=[url,element.libellel]><a
+          class="lien cursor">{{element.libellel}}</a></td>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="datet">
-        <th mat-header-cell *matHeaderCellDef class="text-center"> Date du tirage </th>
+        <th mat-header-cell *matHeaderCellDef class="text-center"> Date du tirage</th>
         <td mat-cell *matCellDef="let element" class="text-center"> {{element.datet | date:'dd/MM/yyyy'}} </td>
       </ng-container>
 
       <!-- Weight Column -->
       <ng-container matColumnDef="nbredemande">
-        <th mat-header-cell *matHeaderCellDef class="text-center"> Nombre de postulant tirer </th>
+        <th mat-header-cell *matHeaderCellDef class="text-center"> Nombre de postulant tirer</th>
         <td mat-cell *matCellDef="let element" class="text-center"> {{element.nbredemande}} </td>
       </ng-container>
 
       <!-- Symbol Column -->
       <ng-container matColumnDef="Action">
-        <th mat-header-cell *matHeaderCellDef class="text-center"> Action </th>
+        <th mat-header-cell *matHeaderCellDef class="text-center"> Action</th>
         <td mat-cell *matCellDef="let element" class="text-center" [routerLink]=[url,element.libellel]>
-          <img src="../../assets/information.png" class="button cursor" height="25" alt="image montrant le button de recherche">
+          <img src="../../assets/information.png" class="button cursor" height="25"
+               alt="image montrant le button de recherche">
         </td>
       </ng-container>
 
@@ -50,6 +51,7 @@
 
   </div>
 
-    <div class="m-3  retour"><img class="cursor" routerLink="/accueil" width="100" src="../../assets/Group%204.svg" alt="" srcset=""></div>
-  </div>
+  <div class="m-3  retour"><img class="cursor" routerLink="/" width="100" src="../../assets/Group%204.svg" alt=""
+                                srcset=""></div>
+</div>
 
