--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -8,6 +8,14 @@ nav {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     /* height: 12% !important; */
 }
+.activate{
+  background-color: darkblue !important;
+  opacity: .75;
+
+}
+.activate a{
+  color: #FFFFFF !important;
+}
 
 .logoFont {
     width: 190px;
@@ -72,16 +80,15 @@ span:hover{
     box-shadow: inset -4px -2px 4px rgba(0, 0, 0, 0.25);
 }
 
-.nav-link2 {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 60O;
-    font-size: 20px;
-    line-height: 22px;
-    color: #000000;
-
-
+.nav-link {
+    font-family: 'Inter' !important;
+    font-style: normal !important;
+    font-weight: 60O !important;
+    font-size: 20px !important;
+    line-height: 22px !important;
+    color: #000000 !important;
 }
+
 .accueil:hover {
     background-color: darkblue !important;
     margin-right: 25px;
@@ -92,6 +99,8 @@ span:hover{
     opacity: .75;
 }
 
+
+
 .tirage:hover {
     background-color: darkblue !important;
     margin-right: 25px;
@@ -101,11 +110,9 @@ span:hover{
     box-shadow: inset -4px -2px 4px rgb(0 0 0 / 25%);
     opacity: .75;
 }
-.nav-link2:hover{
-    color: #ffffff;
-}
-.nav-link1:hover{
-    color: #ffffff;
+
+.nav-link:hover{
+    color: #ffffff !important;
 }
 
 @media screen and (max-width: 990px) {
